--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,6 +3,6 @@ contact_links:
   - name: EVS Community Discussions
     url: https://github.com/CTechCorp/evs-issues/discussions
     about: Please ask and answer questions here.
-  - name: Support with Proprietary Information
-    url: mailto:support@ctech.com
-    about: If you need direct support with data or images of a proprietary nature, email support@ctech.com
+  - name: Support with Confidential Data
+    url: https://www.ctech.com/submit-technical-support-request/
+    about: If you need direct support with data or images of a proprietary nature, email support@ctech.com. See link for details.
