--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,8 +1,8 @@
 name: Bug report
-about: Report an issue to help us improve
-title: ''
-labels: bug, needs-triage
-assignees: ''
+description: Report an issue to help us improve
+title: "Bug: "
+labels: ["bug", "needs-triage"]
+assignees: []
 
 body:
   - type: markdown
