--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,6 +1,6 @@
 name: Bug report
 description: Report an issue to help us improve
-title: " "
+title: "Enter Issue Summary..."
 type: "bug"
 labels: ["needs-triage"]
 assignees: []
